# fortsparse

./: .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  fpm.toml
.github/workflows/: ci.yml
cmake/: FindSuperLU.cmake  FindUMFPACK.cmake
docs/: design.md
helper/: fortsparse_umfpack_helper.c
include/: fsparse_ipc.h  fsparse_proto.h
src/: CMakeLists.txt  fortsparse.f90  fortsparse_backend.f90  fortsparse_csc.f90  fortsparse_kinds.f90  fortsparse_solver.F90  fortsparse_solver.f90  fortsparse_status.f90  fortsparse_version.f90
src/ipc/: fortsparse_ipc_proto.f90  fortsparse_umfpack_ipc.f90  fsparse_ipc.c
src/superlu/: fortsparse_superlu.f90  fsparse_superlu.c
test/: CMakeLists.txt  test_fortsparse_kinds.f90  test_fortsparse_smoke.f90  test_fortsparse_status.f90
test/csc/: test_fortsparse_csc.f90
test/ipc/: test_fortsparse_ipc_selflocate.f90  test_fortsparse_umfpack_ipc.f90
test/solver/: test_fortsparse_errors.f90  test_fortsparse_poisson.f90  test_fortsparse_solve_complex.f90  test_fortsparse_solve_real.f90
